update de demo (2)

--- a/pages/about.html
+++ b/pages/about.html
@@ -47,7 +47,7 @@
             </div>
             <div class="col-lg-4 text-center bg-primary border-inner py-3">
                 <div class="d-inline-flex align-items-center justify-content-center">
-                    <a href="loggedin.html" class="navbar-brand">
+                    <a href="../index.html" class="navbar-brand">
                         <h1 class="m-0 text-uppercase text-white"><i
                                 class="fa fa-birthday-cake fs-1 text-dark me-3"></i>CakeZone</h1>
                     </a>
@@ -96,7 +96,7 @@
         <div class="row">
             <div class="col-12 text-center">
                 <h1 class="display-4 text-uppercase text-white">Giới thiệu</h1>
-                <a href="loggedin.html">Trang chủ</a>
+                <a href="../index.html">Trang chủ</a>
 
             </div>
         </div>
@@ -159,7 +159,7 @@
     <div class="container-fluid bg-img py-5 mb-5">
         <div class="container py-5">
             <div class="row gx-5 gy-4">
-                <div class="col-lg-3 col-md-6">
+                <!-- <div class="col-lg-3 col-md-6">
                     <div class="d-flex">
                         <div class="bg-primary border-inner d-flex align-items-center justify-content-center mb-3"
                             style="width: 60px; height: 60px;">
@@ -206,7 +206,7 @@
                             <h1 class="display-5 text-white mb-0" data-toggle="counter-up">12345</h1>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
