--- a/pages/wedding-cake-1-logged.html
+++ b/pages/wedding-cake-1-logged.html
@@ -259,10 +259,10 @@
               <img src="../img/wdcake-1.jpg" class="card-img-top" alt="Wedding Cake 1" />
               <div class="card-body d-flex flex-column">
                 <h6 class="fw-bold">
-                  <a href="wedding-cake-detail-1-logged.html">Bánh Sinh Nhật Socola Ngọt</a>
+                  <a href="wedding-cake-detail-1-logged.html">Bánh Cưới Vừa Ngọt</a>
                 </h6>
                 <p class="mb-3 flex-grow-1">
-                  Bánh làm từ socola nguyên chất, kem tươi mịn màng, trang trí bằng dâu tây tươi.
+                  Bánh cưới làm từ socola nguyên chất, phủ kem tươi mịn màng, điểm xuyết dâu tây tươi tạo vẻ lãng mạn.
                 </p>
                 <h5 class="fw-semibold text-primary">320.000 ₫</h5>
                 <button class="btn btn-primary mt-2" onclick="window.location.href='wedding-cake-detail-1-logged.html'">
@@ -281,10 +281,10 @@
               <img src="../img/wdcake-2.jpg" class="card-img-top" alt="Wedding Cake 2" />
               <div class="card-body d-flex flex-column">
                 <h6 class="fw-bold">
-                  <a href="wedding-cake-detail-1-logged.html">Bánh Sinh Nhật Vani Trái Cây</a>
+                  <a href="wedding-cake-detail-1-logged.html">Bánh Cưới Vani Trái Cây</a>
                 </h6>
                 <p class="mb-3 flex-grow-1">
-                  Bánh vani mềm xốp, kem bơ thơm ngậy, trang trí bằng trái cây tươi theo mùa.
+                  Hương vị vani nhẹ nhàng hòa cùng trái cây tươi, tạo nên chiếc bánh cưới tươi sáng và đầy sức sống.
                 </p>
                 <h5 class="fw-semibold text-primary">280.000 ₫</h5>
                 <button class="btn btn-primary mt-2" onclick="window.location.href='wedding-cake-detail-1-logged.html'">
@@ -303,10 +303,10 @@
               <img src="../img/wdcake-3.jpg" class="card-img-top" alt="Wedding Cake 3" />
               <div class="card-body d-flex flex-column">
                 <h6 class="fw-bold">
-                  <a href="wedding-cake-detail-1-logged.html">Bánh Sinh Nhật Red Velvet</a>
+                  <a href="wedding-cake-detail-1-logged.html">Bánh Cưới Red Velvet</a>
                 </h6>
                 <p class="mb-3 flex-grow-1">
-                  Bánh Red Velvet đỏ rực, kem phô mai béo ngậy — lựa chọn nổi bật và sang trọng.
+                  Bánh Red Velvet đỏ quyến rũ kết hợp với lớp kem phô mai béo ngậy — lựa chọn sang trọng cho lễ cưới.
                 </p>
                 <h5 class="fw-semibold text-primary">420.000 ₫</h5>
                 <button class="btn btn-primary mt-2" onclick="window.location.href='wedding-cake-detail-1-logged.html'">
@@ -325,10 +325,10 @@
               <img src="../img/wdcake-4.jpg" class="card-img-top" alt="Wedding Cake 4" />
               <div class="card-body d-flex flex-column">
                 <h6 class="fw-bold">
-                  <a href="wedding-cake-detail-1-logged.html">Bánh Sinh Nhật Trà Xanh</a>
+                  <a href="wedding-cake-detail-1-logged.html">Bánh Cưới Trà Xanh Thanh Khiết</a>
                 </h6>
                 <p class="mb-3 flex-grow-1">
-                  Bánh trà xanh nhẹ nhàng, kem tươi mát lạnh, trang trí bằng bột trà xanh.
+                  Bánh cưới vị trà xanh thanh mát, phủ kem tươi nhẹ, mang lại cảm giác tinh tế và tự nhiên.
                 </p>
                 <h5 class="fw-semibold text-primary">350.000 ₫</h5>
                 <button class="btn btn-primary mt-2" onclick="window.location.href='wedding-cake-detail-1-logged.html'">
@@ -347,10 +347,10 @@
               <img src="../img/wdcake-5.jpg" class="card-img-top" alt="Wedding Cake 5" />
               <div class="card-body d-flex flex-column">
                 <h6 class="fw-bold">
-                  <a href="wedding-cake-detail-1-logged.html">Bánh Sinh Nhật Socola Ngọt</a>
+                  <a href="wedding-cake-detail-1-logged.html">Bánh Cưới Socola Tình Yêu</a>
                 </h6>
                 <p class="mb-3 flex-grow-1">
-                  Bánh làm từ socola nguyên chất, kem tươi mịn màng, trang trí bằng dâu tây tươi.
+                  Lớp bánh socola đậm đà cùng kem tươi mịn màng — biểu tượng ngọt ngào của tình yêu đôi lứa.
                 </p>
                 <h5 class="fw-semibold text-primary">320.000 ₫</h5>
                 <button class="btn btn-primary mt-2" onclick="window.location.href='wedding-cake-detail-1-logged.html'">
@@ -369,10 +369,10 @@
               <img src="../img/wdcake-6.jpg" class="card-img-top" alt="Wedding Cake 6" />
               <div class="card-body d-flex flex-column">
                 <h6 class="fw-bold">
-                  <a href="wedding-cake-detail-1-logged.html">Bánh Sinh Nhật Vani Trái Cây</a>
+                  <a href="wedding-cake-detail-1-logged.html">Bánh Cưới Vani Trắng Tinh Khôi</a>
                 </h6>
                 <p class="mb-3 flex-grow-1">
-                  Bánh vani mềm xốp, kem bơ thơm ngậy, trang trí bằng trái cây tươi theo mùa.
+                  Tầng bánh vani trắng tinh khôi, phủ kem bơ mịn màng, thích hợp cho không gian cưới cổ điển.
                 </p>
                 <h5 class="fw-semibold text-primary">280.000 ₫</h5>
                 <button class="btn btn-primary mt-2" onclick="window.location.href='wedding-cake-detail-1-logged.html'">
@@ -391,10 +391,10 @@
               <img src="../img/wdcake-7.jpg" class="card-img-top" alt="Wedding Cake 7" />
               <div class="card-body d-flex flex-column">
                 <h6 class="fw-bold">
-                  <a href="wedding-cake-detail-1-logged.html">Bánh Sinh Nhật Red Velvet</a>
+                  <a href="wedding-cake-detail-1-logged.html">Bánh Cưới Red Velvet Sang Trọng</a>
                 </h6>
                 <p class="mb-3 flex-grow-1">
-                  Bánh Red Velvet đỏ rực, kem phô mai béo ngậy — lựa chọn nổi bật và sang trọng.
+                  Bánh cưới Red Velvet ba tầng phủ kem trắng, mang vẻ đẹp quý phái cho ngày trọng đại.
                 </p>
                 <h5 class="fw-semibold text-primary">420.000 ₫</h5>
                 <button class="btn btn-primary mt-2" onclick="window.location.href='wedding-cake-detail-1-logged.html'">
@@ -413,10 +413,11 @@
               <img src="../img/wdcake-8.jpg" class="card-img-top" alt="Wedding Cake 8" />
               <div class="card-body d-flex flex-column">
                 <h6 class="fw-bold">
-                  <a href="wedding-cake-detail-1-logged.html">Bánh Sinh Nhật Trà Xanh</a>
+                  <a href="wedding-cake-detail-1-logged.html">Bánh Cưới Trà Xanh Tinh Tế</a>
                 </h6>
                 <p class="mb-3 flex-grow-1">
-                  Bánh trà xanh nhẹ nhàng, kem tươi mát lạnh, trang trí bằng bột trà xanh.
+                  Bánh cưới vị trà xanh nhẹ nhàng, trang trí bằng lá trà và hoa trắng tinh tế, tượng trưng cho sự thanh
+                  khiết.
                 </p>
                 <h5 class="fw-semibold text-primary">350.000 ₫</h5>
                 <button class="btn btn-primary mt-2" onclick="window.location.href='wedding-cake-detail-1-logged.html'">
@@ -673,6 +674,49 @@
       });
     });
   </script>
+  <!-- Tìm theo tên -->
+    <script>
+      document.addEventListener("DOMContentLoaded", () => {
+        const filterBtn = document.querySelector(
+          ".btn.btn-primary i.fa-filter"
+        )?.parentElement;
+        const cakeCols = document.querySelectorAll(".col-12.col-sm-6.col-md-3");
+
+        if (filterBtn) {
+          filterBtn.addEventListener("click", function () {
+            const keyword = document
+              .getElementById("searchName")
+              .value.trim()
+              .toLowerCase();
+            const min =
+              parseInt(document.getElementById("priceMin").value) || 0;
+            const max =
+              parseInt(document.getElementById("priceMax").value) || Infinity;
+
+            cakeCols.forEach((col) => {
+              const nameElement = col.querySelector("h6 a");
+              const cakeName = nameElement
+                ? nameElement.textContent.toLowerCase()
+                : "";
+              const priceText =
+                col.querySelector("h5.fw-semibold.text-primary")?.textContent ||
+                "";
+              const price = parseInt(priceText.replace(/[^\d]/g, ""));
+
+              // Kiểm tra cả hai điều kiện
+              const matchName = keyword === "" || cakeName.includes(keyword);
+              const matchPrice = price >= min && price <= max;
+
+              if (matchName && matchPrice) {
+                col.style.display = "";
+              } else {
+                col.style.display = "none";
+              }
+            });
+          });
+        }
+      });
+    </script>
 </body>
 
 </html>
