--- a/pages/birthday-cake-3-logged.html
+++ b/pages/birthday-cake-3-logged.html
@@ -480,7 +480,7 @@
         <div class="col-lg-4 col-md-6 mb-lg-n5">
           <div
             class="d-flex flex-column align-items-center justify-content-center text-center h-100 bg-primary border-inner p-4">
-            <a href="index.html" class="navbar-brand">
+            <a href="loggedin.html" class="navbar-brand">
               <h1 class="m-0 text-uppercase text-white">
                 <i class="fa fa-birthday-cake fs-1 text-dark me-3"></i>CakeZone
               </h1>
@@ -523,16 +523,16 @@
             <div class="col-lg-4 col-md-12 pt-0 pt-lg-5 mb-5">
               <h4 class="text-primary text-uppercase mb-4">Truy cập nhanh</h4>
               <div class="d-flex flex-column justify-content-start">
-                <a class="text-secondary mb-2" href="index.html"><i
+                <a class="text-secondary mb-2" href="loggedin.html"><i
                     class="bi bi-arrow-right text-primary me-2"></i>Trang
                   chủ</a>
-                <a class="text-secondary mb-2" href="pages/about.html"><i
+                <a class="text-secondary mb-2" href="about-logged.html"><i
                     class="bi bi-arrow-right text-primary me-2"></i>Giới
                   thiệu</a>
-                <a class="text-secondary mb-2" href="pages/team.html"><i
+                <a class="text-secondary mb-2" href="team-logged.html"><i
                     class="bi bi-arrow-right text-primary me-2"></i>Đầu bếp
                   chính</a>
-                <a class="text-secondary mb-2" href="pages/contact.html"><i
+                <a class="text-secondary mb-2" href="contact-logged.html"><i
                     class="bi bi-arrow-right text-primary me-2"></i>Liên
                   hệ</a>
               </div>
@@ -670,7 +670,49 @@
       });
     });
   </script>
+  <!-- Tìm theo tên -->
+    <script>
+      document.addEventListener("DOMContentLoaded", () => {
+        const filterBtn = document.querySelector(
+          ".btn.btn-primary i.fa-filter"
+        )?.parentElement;
+        const cakeCols = document.querySelectorAll(".col-12.col-sm-6.col-md-3");
 
+        if (filterBtn) {
+          filterBtn.addEventListener("click", function () {
+            const keyword = document
+              .getElementById("searchName")
+              .value.trim()
+              .toLowerCase();
+            const min =
+              parseInt(document.getElementById("priceMin").value) || 0;
+            const max =
+              parseInt(document.getElementById("priceMax").value) || Infinity;
+
+            cakeCols.forEach((col) => {
+              const nameElement = col.querySelector("h6 a");
+              const cakeName = nameElement
+                ? nameElement.textContent.toLowerCase()
+                : "";
+              const priceText =
+                col.querySelector("h5.fw-semibold.text-primary")?.textContent ||
+                "";
+              const price = parseInt(priceText.replace(/[^\d]/g, ""));
+
+              // Kiểm tra cả hai điều kiện
+              const matchName = keyword === "" || cakeName.includes(keyword);
+              const matchPrice = price >= min && price <= max;
+
+              if (matchName && matchPrice) {
+                col.style.display = "";
+              } else {
+                col.style.display = "none";
+              }
+            });
+          });
+        }
+      });
+    </script>
 </body>
 
 </html>
