--- a/pages/order-list.html
+++ b/pages/order-list.html
@@ -86,9 +86,9 @@
 
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <div class="navbar-nav ms-auto mx-lg-auto py-0">
-          <a href="loggedin.html" class="nav-item nav-link">Trang chủ</a>
+          <a href="loggedin.html" class="nav-item nav-link active">Trang chủ</a>
           <a href="about-logged.html" class="nav-item nav-link">Giới thiệu</a>
-          <a href="birthday-cake-1-logged.html" class="nav-item nav-link active">Sản phẩm</a>
+          <a href="birthday-cake-1-logged.html" class="nav-item nav-link">Sản phẩm</a>
           <a href="team-logged.html" class="nav-item nav-link">Đầu bếp</a>
           <a href="contact-logged.html" class="nav-item nav-link">Liên hệ</a>
         </div>
