--- a/pages/cart.html
+++ b/pages/cart.html
@@ -196,11 +196,11 @@
     </div>
     <div class="form-group mb-3">
       <label for="address" class="form-label fw-bold">Địa chỉ:</label>
-      <input type="text" id="address" class="form-control" value="123 Đường ABC, Quận 1, TP.HCM" required />
+      <input type="text" id="address" class="form-control" value="255 Nguyễn Sơn, P. Chợ Quán, TP.HCM" required />
     </div>
     <div class="form-group mb-3">
       <label for="phone" class="form-label fw-bold">Số điện thoại:</label>
-      <input type="tel" id="phone" class="form-control" value="0901234567" required />
+      <input type="tel" id="phone" class="form-control" value="0192837465" required />
     </div>
 
 
