--- a/admin/nguyenlieu.html
+++ b/admin/nguyenlieu.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <link rel="icon" type="image/png" href="../img/ryicon.jpg" />
-  <title>BookStore - Quản lý sản phẩm</title>
+  <title>CakeZone - Quản lý sản phẩm</title>
 
   <!-- Fonts & Icons -->
   <link rel="stylesheet"
