--- a/admin/chef.html
+++ b/admin/chef.html
@@ -398,6 +398,21 @@
               text-decoration: none;
             "><i class="material-icons" style="margin-right: 10px"></i>Quản lý nhập hàng</a>
       </li>
+                    <li>
+          <a
+            href="product-price.html"
+            style="
+              display: flex;
+              align-items: center;
+              padding: 0.75rem 1rem;
+              color: white;
+              text-decoration: none;
+
+            "
+            ><i class="material-icons" style="margin-right: 10px"></i>Quản lý
+            giá sản phẩm</a
+          >
+        </li>
       <!-- <li>
         <a href="nguyenlieu.html" style="
               display: flex;
